--- a/quran.html
+++ b/quran.html
@@ -2,6 +2,7 @@
 <html lang="ar">
     <head>
         <title>Quran kareem</title>
+        <meta charset="UTF-8">
         <meta name="describtion" content="القران الكريم استماع بجوده عاليه">
         <meta name="viewport" content="width=device-width, initial-scale=0.6">
         <link rel="stylesheet" href="quran.css">
@@ -1037,72 +1038,5 @@
         <br>
         <br>
         <br>
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
     </body>
 </html>
