--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
   </main>
 
   <footer>
-    صفحة واجهة مبدئية لموقع <span>QURAN</span> – يمكنك الآن إضافة مشغّل الصوت وروابط التلاوات كما تحب.
+         <span>QURAN</span>
   </footer>
 
   <!-- ====== SCRIPT ====== -->
